--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,9 @@ jobs:
       run: chmod +x ./gradlew
     
     - name: Build APK with Gradle
-      run: ./gradlew assembleDebug
+  run: ./gradlew assembleDebug
+  env:
+    GRADLE_OPTS: -Xmx64m
     
     - name: Upload APK artifact
       uses: actions/upload-artifact@v4
